Update with data

--- a/nb/extract_trials_data.ipynb
+++ b/nb/extract_trials_data.ipynb
@@ -259,7 +259,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ce9faef4aac7496b9ec09720447af559",
+       "model_id": "71fef9288b4648d78575c2d1aa2d9f59",
        "version_major": 2,
        "version_minor": 0
       },
@@ -415,7 +415,8 @@
     "                                               'parent_concept_id', \n",
     "                                               'parent_concept_name'])\n",
     "\n",
-    "all_trials_df.to_csv('extracted_parents.csv', index=False)\n",
+    "all_trials_df.to_csv('../data/extracted_parents.csv.xz', index=False, \n",
+    "                     compression='xz')\n",
     "\n",
     "all_trials_df.head()"
    ]
