--- a/nb/find_modified_concepts.ipynb
+++ b/nb/find_modified_concepts.ipynb
@@ -74,7 +74,7 @@
     }
    ],
    "source": [
-    "modifiers <- 'severe|significant|severe'\n",
+    "modifiers <- 'severe|significant|serious'\n",
     "\n",
     "# These files have rows with entries that start with / \" and other problematic\n",
     "#  characters. Luckily there are no ~ used in either, so I chose this as the\n",
@@ -212,78 +212,44 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<caption>A tibble: 6 × 6</caption>\n",
+       "<caption>A tibble: 2 × 6</caption>\n",
        "<thead>\n",
        "\t<tr><th scope=col>modified_concept_id</th><th scope=col>modified_concept_name</th><th scope=col>modified_concept_code</th><th scope=col>parent_concept_id</th><th scope=col>parent_concept_name</th><th scope=col>parent_concept_code</th></tr>\n",
        "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>45765743</td><td>Severe dry skin                                               </td><td>702757002   </td><td> 4039266</td><td>Dry skin                             </td><td>16386004 </td></tr>\n",
-       "\t<tr><td>45765900</td><td>Severe cognitive impairment                                   </td><td>702956004   </td><td>  443432</td><td>Impaired cognition                   </td><td>386806002</td></tr>\n",
-       "\t<tr><td>45766192</td><td>Severe hypoxic ischemic encephalopathy                        </td><td>703303004   </td><td>45766189</td><td>Hypoxic ischemic encephalopathy      </td><td>703300001</td></tr>\n",
-       "\t<tr><td>40479642</td><td>Pneumonia due to Severe acute respiratory syndrome coronavirus</td><td>441590008   </td><td>  320651</td><td>Severe acute respiratory syndrome    </td><td>398447004</td></tr>\n",
-       "\t<tr><td>40479642</td><td>Pneumonia due to Severe acute respiratory syndrome coronavirus</td><td>441590008   </td><td>37016927</td><td>Pneumonia caused by Human coronavirus</td><td>713084008</td></tr>\n",
-       "\t<tr><td>42872411</td><td>Severe major depression, single episode                       </td><td>251000119105</td><td>42872722</td><td>Severe major depression              </td><td>450714000</td></tr>\n",
+       "\t<tr><td>45765743</td><td>Severe dry skin            </td><td>702757002</td><td>4039266</td><td>Dry skin          </td><td>16386004 </td></tr>\n",
+       "\t<tr><td>45765900</td><td>Severe cognitive impairment</td><td>702956004</td><td> 443432</td><td>Impaired cognition</td><td>386806002</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A tibble: 6 × 6\n",
+       "A tibble: 2 × 6\n",
        "\\begin{tabular}{r|llllll}\n",
        " modified\\_concept\\_id & modified\\_concept\\_name & modified\\_concept\\_code & parent\\_concept\\_id & parent\\_concept\\_name & parent\\_concept\\_code\\\\\n",
        " <dbl> & <chr> & <chr> & <dbl> & <chr> & <chr>\\\\\n",
        "\\hline\n",
-       "\t 45765743 & Severe dry skin                                                & 702757002    &  4039266 & Dry skin                              & 16386004 \\\\\n",
-       "\t 45765900 & Severe cognitive impairment                                    & 702956004    &   443432 & Impaired cognition                    & 386806002\\\\\n",
-       "\t 45766192 & Severe hypoxic ischemic encephalopathy                         & 703303004    & 45766189 & Hypoxic ischemic encephalopathy       & 703300001\\\\\n",
-       "\t 40479642 & Pneumonia due to Severe acute respiratory syndrome coronavirus & 441590008    &   320651 & Severe acute respiratory syndrome     & 398447004\\\\\n",
-       "\t 40479642 & Pneumonia due to Severe acute respiratory syndrome coronavirus & 441590008    & 37016927 & Pneumonia caused by Human coronavirus & 713084008\\\\\n",
-       "\t 42872411 & Severe major depression, single episode                        & 251000119105 & 42872722 & Severe major depression               & 450714000\\\\\n",
+       "\t 45765743 & Severe dry skin             & 702757002 & 4039266 & Dry skin           & 16386004 \\\\\n",
+       "\t 45765900 & Severe cognitive impairment & 702956004 &  443432 & Impaired cognition & 386806002\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A tibble: 6 × 6\n",
+       "A tibble: 2 × 6\n",
        "\n",
        "| modified_concept_id &lt;dbl&gt; | modified_concept_name &lt;chr&gt; | modified_concept_code &lt;chr&gt; | parent_concept_id &lt;dbl&gt; | parent_concept_name &lt;chr&gt; | parent_concept_code &lt;chr&gt; |\n",
        "|---|---|---|---|---|---|\n",
-       "| 45765743 | Severe dry skin                                                | 702757002    |  4039266 | Dry skin                              | 16386004  |\n",
-       "| 45765900 | Severe cognitive impairment                                    | 702956004    |   443432 | Impaired cognition                    | 386806002 |\n",
-       "| 45766192 | Severe hypoxic ischemic encephalopathy                         | 703303004    | 45766189 | Hypoxic ischemic encephalopathy       | 703300001 |\n",
-       "| 40479642 | Pneumonia due to Severe acute respiratory syndrome coronavirus | 441590008    |   320651 | Severe acute respiratory syndrome     | 398447004 |\n",
-       "| 40479642 | Pneumonia due to Severe acute respiratory syndrome coronavirus | 441590008    | 37016927 | Pneumonia caused by Human coronavirus | 713084008 |\n",
-       "| 42872411 | Severe major depression, single episode                        | 251000119105 | 42872722 | Severe major depression               | 450714000 |\n",
+       "| 45765743 | Severe dry skin             | 702757002 | 4039266 | Dry skin           | 16386004  |\n",
+       "| 45765900 | Severe cognitive impairment | 702956004 |  443432 | Impaired cognition | 386806002 |\n",
        "\n"
       ],
       "text/plain": [
-       "  modified_concept_id\n",
-       "1 45765743           \n",
-       "2 45765900           \n",
-       "3 45766192           \n",
-       "4 40479642           \n",
-       "5 40479642           \n",
-       "6 42872411           \n",
-       "  modified_concept_name                                         \n",
-       "1 Severe dry skin                                               \n",
-       "2 Severe cognitive impairment                                   \n",
-       "3 Severe hypoxic ischemic encephalopathy                        \n",
-       "4 Pneumonia due to Severe acute respiratory syndrome coronavirus\n",
-       "5 Pneumonia due to Severe acute respiratory syndrome coronavirus\n",
-       "6 Severe major depression, single episode                       \n",
-       "  modified_concept_code parent_concept_id parent_concept_name                  \n",
-       "1 702757002              4039266          Dry skin                             \n",
-       "2 702956004               443432          Impaired cognition                   \n",
-       "3 703303004             45766189          Hypoxic ischemic encephalopathy      \n",
-       "4 441590008               320651          Severe acute respiratory syndrome    \n",
-       "5 441590008             37016927          Pneumonia caused by Human coronavirus\n",
-       "6 251000119105          42872722          Severe major depression              \n",
-       "  parent_concept_code\n",
-       "1 16386004           \n",
-       "2 386806002          \n",
-       "3 703300001          \n",
-       "4 398447004          \n",
-       "5 713084008          \n",
-       "6 450714000          "
+       "  modified_concept_id modified_concept_name       modified_concept_code\n",
+       "1 45765743            Severe dry skin             702757002            \n",
+       "2 45765900            Severe cognitive impairment 702956004            \n",
+       "  parent_concept_id parent_concept_name parent_concept_code\n",
+       "1 4039266           Dry skin            16386004           \n",
+       "2  443432           Impaired cognition  386806002          "
       ]
      },
      "metadata": {},
@@ -324,64 +290,44 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<caption>A tibble: 6 × 4</caption>\n",
+       "<caption>A tibble: 2 × 4</caption>\n",
        "<thead>\n",
        "\t<tr><th scope=col>parent_concept_id</th><th scope=col>parent_concept_name</th><th scope=col>parent_concept_code</th><th scope=col>concept_synonym_name</th></tr>\n",
        "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>4039266</td><td>Dry skin          </td><td>16386004 </td><td>Anhydrotic skin             </td></tr>\n",
-       "\t<tr><td>4039266</td><td>Dry skin          </td><td>16386004 </td><td>Dry skin (finding)          </td></tr>\n",
-       "\t<tr><td>4039266</td><td>Dry skin          </td><td>16386004 </td><td>Dry skin                    </td></tr>\n",
-       "\t<tr><td> 443432</td><td>Impaired cognition</td><td>386806002</td><td>Cognitive disturbance       </td></tr>\n",
-       "\t<tr><td> 443432</td><td>Impaired cognition</td><td>386806002</td><td>Cognitive dysfunction       </td></tr>\n",
-       "\t<tr><td> 443432</td><td>Impaired cognition</td><td>386806002</td><td>Impaired cognition (finding)</td></tr>\n",
+       "\t<tr><td>4039266</td><td>Dry skin</td><td>16386004</td><td>Anhydrotic skin   </td></tr>\n",
+       "\t<tr><td>4039266</td><td>Dry skin</td><td>16386004</td><td>Dry skin (finding)</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A tibble: 6 × 4\n",
+       "A tibble: 2 × 4\n",
        "\\begin{tabular}{r|llll}\n",
        " parent\\_concept\\_id & parent\\_concept\\_name & parent\\_concept\\_code & concept\\_synonym\\_name\\\\\n",
        " <dbl> & <chr> & <chr> & <chr>\\\\\n",
        "\\hline\n",
-       "\t 4039266 & Dry skin           & 16386004  & Anhydrotic skin             \\\\\n",
-       "\t 4039266 & Dry skin           & 16386004  & Dry skin (finding)          \\\\\n",
-       "\t 4039266 & Dry skin           & 16386004  & Dry skin                    \\\\\n",
-       "\t  443432 & Impaired cognition & 386806002 & Cognitive disturbance       \\\\\n",
-       "\t  443432 & Impaired cognition & 386806002 & Cognitive dysfunction       \\\\\n",
-       "\t  443432 & Impaired cognition & 386806002 & Impaired cognition (finding)\\\\\n",
+       "\t 4039266 & Dry skin & 16386004 & Anhydrotic skin   \\\\\n",
+       "\t 4039266 & Dry skin & 16386004 & Dry skin (finding)\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A tibble: 6 × 4\n",
+       "A tibble: 2 × 4\n",
        "\n",
        "| parent_concept_id &lt;dbl&gt; | parent_concept_name &lt;chr&gt; | parent_concept_code &lt;chr&gt; | concept_synonym_name &lt;chr&gt; |\n",
        "|---|---|---|---|\n",
-       "| 4039266 | Dry skin           | 16386004  | Anhydrotic skin              |\n",
-       "| 4039266 | Dry skin           | 16386004  | Dry skin (finding)           |\n",
-       "| 4039266 | Dry skin           | 16386004  | Dry skin                     |\n",
-       "|  443432 | Impaired cognition | 386806002 | Cognitive disturbance        |\n",
-       "|  443432 | Impaired cognition | 386806002 | Cognitive dysfunction        |\n",
-       "|  443432 | Impaired cognition | 386806002 | Impaired cognition (finding) |\n",
+       "| 4039266 | Dry skin | 16386004 | Anhydrotic skin    |\n",
+       "| 4039266 | Dry skin | 16386004 | Dry skin (finding) |\n",
        "\n"
       ],
       "text/plain": [
        "  parent_concept_id parent_concept_name parent_concept_code\n",
        "1 4039266           Dry skin            16386004           \n",
        "2 4039266           Dry skin            16386004           \n",
-       "3 4039266           Dry skin            16386004           \n",
-       "4  443432           Impaired cognition  386806002          \n",
-       "5  443432           Impaired cognition  386806002          \n",
-       "6  443432           Impaired cognition  386806002          \n",
-       "  concept_synonym_name        \n",
-       "1 Anhydrotic skin             \n",
-       "2 Dry skin (finding)          \n",
-       "3 Dry skin                    \n",
-       "4 Cognitive disturbance       \n",
-       "5 Cognitive dysfunction       \n",
-       "6 Impaired cognition (finding)"
+       "  concept_synonym_name\n",
+       "1 Anhydrotic skin     \n",
+       "2 Dry skin (finding)  "
       ]
      },
      "metadata": {},
