Fix indexing error (#2)
Merges https://github.com/zietzm/map-modifiers/pull/2

fixes #1

--- a/nb/extract_trials_data.ipynb
+++ b/nb/extract_trials_data.ipynb
@@ -241,11 +241,14 @@
     "        try:\n",
     "            start_index = text.lower().replace('\\n', '').index(name)\n",
     "        except ValueError:\n",
-    "            start_index = (text.lower().replace('\\n', '').replace(' ', '')\n",
-    "                           .index(name.replace(' ', '')))\n",
+    "            try:\n",
+    "                start_index = (text.lower().replace('\\n', '').replace('  ', ' ')\n",
+    "                               .index(name.replace('  ', ' ')))\n",
+    "            except ValueError:\n",
+    "                continue\n",
     "        concept_name = concept_id_to_name[concept_id]\n",
     "        outputs.append(\n",
-    "            (nct_id, name, text[start_index-100:start_index+100],\n",
+    "            (nct_id, name, text[max(start_index - 100, 0):start_index + 100],\n",
     "             concept_id, concept_name)\n",
     "        )\n",
     "    return outputs"
@@ -259,7 +262,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71fef9288b4648d78575c2d1aa2d9f59",
+       "model_id": "d1b3468221bf48a59b0f2775bdb9bd48",
        "version_major": 2,
        "version_minor": 0
       },
@@ -424,7 +427,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:modifiers] *",
+   "display_name": "Python [conda env:modifiers]",
    "language": "python",
    "name": "conda-env-modifiers-py"
   },
