--- a/nb/notes_for_annotation.ipynb
+++ b/nb/notes_for_annotation.ipynb
@@ -45,7 +45,7 @@
     "\n",
     "Using the dataframe: extracted_parents.csv\n",
     "\n",
-    "This notebook extracts notes that will be annotated for our project in Symbolic Methods. The notes will be annotated manually by two students, MetaMap, Usagi and our proposed method.\n",
+    "This notebook extracts notes that will be annotated for our project in Symbolic Methods. The notes will be annotated manually by two students, MetaMap, Criteria2Query and our proposed method.\n",
     "\n",
     "For this project we are interested in the modifiers: **severe, significant or serious**\n",
     "\n",
